--- a/SunsetHackathon.Android/Properties/AndroidManifest.xml
+++ b/SunsetHackathon.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.hardwarecity.Sunset_Hackathon">
-    <uses-sdk android:minSdkVersion="19" android:targetSdkVersion="27" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" 
+          android:versionCode="1" 
+          android:versionName="1.0" 
+          package="com.hardwarecity.Sunset_Hackathon">
+    
+    <uses-sdk android:minSdkVersion="19" 
+              android:targetSdkVersion="27" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    
     <application android:label="SunsetHackathon.Android">
+        <receiver 
+            android:name="com.google.firebase.iid.FirebaseInstanceIdInternalReceiver" 
+            android:exported="false" />
+        <receiver 
+            android:name="com.google.firebase.iid.FirebaseInstanceIdReceiver" 
+            android:exported="true" 
+            android:permission="com.google.android.c2dm.permission.SEND">
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+                <category android:name="${applicationId}" />
+            </intent-filter>
+        </receiver>
     </application>
+    
 </manifest>
