--- a/SunsetHackathon.Android/Properties/AndroidManifest.xml
+++ b/SunsetHackathon.Android/Properties/AndroidManifest.xml
@@ -7,7 +7,11 @@
     <uses-sdk android:minSdkVersion="19" 
               android:targetSdkVersion="27" />
 
+
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.AccessWifiState" />
+    <uses-permission android:name="android.permission.MediaContentControl" />
+    <uses-permission android:name="android.permission.WakeLock" />
     
     <application android:label="SunsetHackathon.Android">
         <receiver 
