--- a/SunsetHackathon.Android/SunsetHackathon.Android.csproj
+++ b/SunsetHackathon.Android/SunsetHackathon.Android.csproj
@@ -57,6 +57,9 @@
     <PackageReference Include="Plugin.FirebasePushNotification">
       <Version>2.3.0</Version>
     </PackageReference>
+    <PackageReference Include="Plugin.MediaManager">
+      <Version>0.4.5</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
