--- a/SunsetHackathon.iOS/SunsetHackathon.iOS.csproj
+++ b/SunsetHackathon.iOS/SunsetHackathon.iOS.csproj
@@ -151,6 +151,9 @@
     <PackageReference Include="Plugin.FirebasePushNotification">
       <Version>2.3.0</Version>
     </PackageReference>
+    <PackageReference Include="Plugin.MediaManager">
+      <Version>0.4.5</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
