--- a/SunsetHackathon/SunsetHackathon.csproj
+++ b/SunsetHackathon/SunsetHackathon.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="3.0.0.482510" />
     <PackageReference Include="Plugin.FirebasePushNotification" Version="2.3.0" />
+    <PackageReference Include="Plugin.MediaManager" Version="0.4.5" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Update="AppResources.resx">
